src/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarationsList
    3                         | FunctionDeclaration FunctionsAndDeclarationsList
    4                         | Declaration FunctionsAndDeclarationsList

    5 FunctionsAndDeclarationsList: FunctionDefinition FunctionsAndDeclarationsList
    6                             | FunctionDeclaration FunctionsAndDeclarationsList
    7                             | Declaration FunctionsAndDeclarationsList
    8                             | %empty

    9 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

   10 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
   11             | LBRACE RBRACE

   12 DeclarationsAndStatements: Statement DeclarationsAndStatements
   13                          | Declaration DeclarationsAndStatements
   14                          | Statement
   15                          | Declaration

   16 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   17 FunctionDeclarator: ID LPAR ParameterList RPAR

   18 ParameterList: ParameterDeclaration ParameterDeclarationList

   19 ParameterDeclarationList: COMMA ParameterDeclaration ParameterDeclarationList
   20                         | %empty

   21 ParameterDeclaration: TypeSpec ID
   22                     | TypeSpec

   23 Declaration: TypeSpec Declarator DeclaratorList SEMI
   24            | error SEMI

   25 DeclaratorList: COMMA Declarator DeclaratorList
   26               | %empty

   27 TypeSpec: CHAR
   28         | INT
   29         | VOID
   30         | SHORT
   31         | DOUBLE

   32 Declarator: ID ASSIGN ExprList
   33           | ID

   34 Statement: IF LPAR ExprList RPAR StatementOrError
   35          | IF LPAR ExprList RPAR StatementOrError ELSE StatementOrError
   36          | WHILE LPAR ExprList RPAR StatementOrError
   37          | LBRACE StatementList RBRACE
   38          | RETURN ExprList SEMI
   39          | RETURN SEMI
   40          | ExprList SEMI
   41          | SEMI
   42          | LBRACE error RBRACE
   43          | LBRACE RBRACE

   44 StatementList: StatementOrError StatementList
   45              | StatementOrError

   46 StatementOrError: Statement
   47                 | error SEMI

   48 Expr: OperatorExpression
   49     | LPAR ExprList RPAR
   50     | ID LPAR Expr ExprOptionalList RPAR
   51     | ID LPAR RPAR
   52     | ID
   53     | INTLIT
   54     | CHRLIT
   55     | REALLIT
   56     | ID LPAR error RPAR
   57     | LPAR error RPAR

   58 ExprList: ExprList COMMA Expr
   59         | Expr

   60 ExprOptionalList: COMMA Expr ExprOptionalList
   61                 | %empty

   62 OperatorExpression: Expr ASSIGN Expr
   63                   | Expr PLUS Expr
   64                   | Expr MINUS Expr
   65                   | Expr MUL Expr
   66                   | Expr DIV Expr
   67                   | Expr MOD Expr
   68                   | Expr OR Expr
   69                   | Expr AND Expr
   70                   | Expr BITWISEAND Expr
   71                   | Expr BITWISEOR Expr
   72                   | Expr BITWISEXOR Expr
   73                   | Expr EQ Expr
   74                   | Expr NE Expr
   75                   | Expr LE Expr
   76                   | Expr GE Expr
   77                   | Expr LT Expr
   78                   | Expr GT Expr
   79                   | PLUS Expr
   80                   | MINUS Expr
   81                   | NOT Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 24 42 47 56 57
    INTLIT <token> (258) 53
    CHRLIT <token> (259) 54
    REALLIT <token> (260) 55
    IF <token> (261) 34 35
    ELSE <token> (262) 35
    WHILE <token> (263) 36
    RETURN <token> (264) 38 39
    RESERVED <token> (265)
    CHAR <token> (266) 27
    INT <token> (267) 28
    SHORT <token> (268) 30
    DOUBLE <token> (269) 31
    VOID <token> (270) 29
    PLUS <token> (271) 63 79
    MINUS <token> (272) 64 80
    MUL <token> (273) 65
    DIV <token> (274) 66
    MOD <token> (275) 67
    EQ <token> (276) 73
    NE <token> (277) 74
    GE <token> (278) 76
    GT <token> (279) 78
    LE <token> (280) 75
    LT <token> (281) 77
    AND <token> (282) 69
    OR <token> (283) 68
    NOT <token> (284) 81
    BITWISEAND <token> (285) 70
    BITWISEOR <token> (286) 71
    BITWISEXOR <token> (287) 72
    ASSIGN <token> (288) 32 62
    COMMA <token> (289) 19 25 58 60
    LBRACE <token> (290) 10 11 37 42 43
    LPAR <token> (291) 17 34 35 36 49 50 51 56 57
    RBRACE <token> (292) 10 11 37 42 43
    RPAR <token> (293) 17 34 35 36 49 50 51 56 57
    SEMI <token> (294) 16 23 24 38 39 40 41 47
    ID <token> (295) 17 21 32 33 50 51 52 56
    NO_ELSE (296)
    UNARY_OPERATOR (297)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    Program <node> (44)
        on left: 1
        on right: 0
    FunctionsAndDeclarations <node> (45)
        on left: 2 3 4
        on right: 1
    FunctionsAndDeclarationsList <node> (46)
        on left: 5 6 7 8
        on right: 2 3 4 5 6 7
    FunctionDefinition <node> (47)
        on left: 9
        on right: 2 5
    FunctionBody <node> (48)
        on left: 10 11
        on right: 9
    DeclarationsAndStatements <node> (49)
        on left: 12 13 14 15
        on right: 10 12 13
    FunctionDeclaration <node> (50)
        on left: 16
        on right: 3 6
    FunctionDeclarator <node> (51)
        on left: 17
        on right: 9 16
    ParameterList <node> (52)
        on left: 18
        on right: 17
    ParameterDeclarationList <node> (53)
        on left: 19 20
        on right: 18 19
    ParameterDeclaration <node> (54)
        on left: 21 22
        on right: 18 19
    Declaration <node> (55)
        on left: 23 24
        on right: 4 7 13 15
    DeclaratorList <node> (56)
        on left: 25 26
        on right: 23 25
    TypeSpec <node> (57)
        on left: 27 28 29 30 31
        on right: 9 16 21 22 23
    Declarator <node> (58)
        on left: 32 33
        on right: 23 25
    Statement <node> (59)
        on left: 34 35 36 37 38 39 40 41 42 43
        on right: 12 14 46
    StatementList <node> (60)
        on left: 44 45
        on right: 37 44
    StatementOrError <node> (61)
        on left: 46 47
        on right: 34 35 36 44 45
    Expr <node> (62)
        on left: 48 49 50 51 52 53 54 55 56 57
        on right: 50 58 59 60 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    ExprList <node> (63)
        on left: 58 59
        on right: 32 34 35 36 38 40 49 58
    ExprOptionalList <node> (64)
        on left: 60 61
        on right: 50 60
    OperatorExpression <node> (65)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 48


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   24 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   27 TypeSpec: CHAR .

    $default  reduce using rule 27 (TypeSpec)


State 3

   28 TypeSpec: INT .

    $default  reduce using rule 28 (TypeSpec)


State 4

   30 TypeSpec: SHORT .

    $default  reduce using rule 30 (TypeSpec)


State 5

   31 TypeSpec: DOUBLE .

    $default  reduce using rule 31 (TypeSpec)


State 6

   29 TypeSpec: VOID .

    $default  reduce using rule 29 (TypeSpec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations .

    $default  reduce using rule 1 (Program)


State 9

    2 FunctionsAndDeclarations: FunctionDefinition . FunctionsAndDeclarationsList

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 8 (FunctionsAndDeclarationsList)

    FunctionsAndDeclarationsList  go to state 15
    FunctionDefinition            go to state 16
    FunctionDeclaration           go to state 17
    Declaration                   go to state 18
    TypeSpec                      go to state 12


State 10

    3 FunctionsAndDeclarations: FunctionDeclaration . FunctionsAndDeclarationsList

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 8 (FunctionsAndDeclarationsList)

    FunctionsAndDeclarationsList  go to state 19
    FunctionDefinition            go to state 16
    FunctionDeclaration           go to state 17
    Declaration                   go to state 18
    TypeSpec                      go to state 12


State 11

    4 FunctionsAndDeclarations: Declaration . FunctionsAndDeclarationsList

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 8 (FunctionsAndDeclarationsList)

    FunctionsAndDeclarationsList  go to state 20
    FunctionDefinition            go to state 16
    FunctionDeclaration           go to state 17
    Declaration                   go to state 18
    TypeSpec                      go to state 12


State 12

    9 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   16 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   23 Declaration: TypeSpec . Declarator DeclaratorList SEMI

    ID  shift, and go to state 21

    FunctionDeclarator  go to state 22
    Declarator          go to state 23


State 13

   24 Declaration: error SEMI .

    $default  reduce using rule 24 (Declaration)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarationsList .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 16

    5 FunctionsAndDeclarationsList: FunctionDefinition . FunctionsAndDeclarationsList

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 8 (FunctionsAndDeclarationsList)

    FunctionsAndDeclarationsList  go to state 24
    FunctionDefinition            go to state 16
    FunctionDeclaration           go to state 17
    Declaration                   go to state 18
    TypeSpec                      go to state 12


State 17

    6 FunctionsAndDeclarationsList: FunctionDeclaration . FunctionsAndDeclarationsList

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 8 (FunctionsAndDeclarationsList)

    FunctionsAndDeclarationsList  go to state 25
    FunctionDefinition            go to state 16
    FunctionDeclaration           go to state 17
    Declaration                   go to state 18
    TypeSpec                      go to state 12


State 18

    7 FunctionsAndDeclarationsList: Declaration . FunctionsAndDeclarationsList

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 8 (FunctionsAndDeclarationsList)

    FunctionsAndDeclarationsList  go to state 26
    FunctionDefinition            go to state 16
    FunctionDeclaration           go to state 17
    Declaration                   go to state 18
    TypeSpec                      go to state 12


State 19

    3 FunctionsAndDeclarations: FunctionDeclaration FunctionsAndDeclarationsList .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 20

    4 FunctionsAndDeclarations: Declaration FunctionsAndDeclarationsList .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 21

   17 FunctionDeclarator: ID . LPAR ParameterList RPAR
   32 Declarator: ID . ASSIGN ExprList
   33           | ID .

    ASSIGN  shift, and go to state 27
    LPAR    shift, and go to state 28

    $default  reduce using rule 33 (Declarator)


State 22

    9 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   16 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 29
    SEMI    shift, and go to state 30

    FunctionBody  go to state 31


State 23

   23 Declaration: TypeSpec Declarator . DeclaratorList SEMI

    COMMA  shift, and go to state 32

    $default  reduce using rule 26 (DeclaratorList)

    DeclaratorList  go to state 33


State 24

    5 FunctionsAndDeclarationsList: FunctionDefinition FunctionsAndDeclarationsList .

    $default  reduce using rule 5 (FunctionsAndDeclarationsList)


State 25

    6 FunctionsAndDeclarationsList: FunctionDeclaration FunctionsAndDeclarationsList .

    $default  reduce using rule 6 (FunctionsAndDeclarationsList)


State 26

    7 FunctionsAndDeclarationsList: Declaration FunctionsAndDeclarationsList .

    $default  reduce using rule 7 (FunctionsAndDeclarationsList)


State 27

   32 Declarator: ID ASSIGN . ExprList

    INTLIT   shift, and go to state 34
    CHRLIT   shift, and go to state 35
    REALLIT  shift, and go to state 36
    PLUS     shift, and go to state 37
    MINUS    shift, and go to state 38
    NOT      shift, and go to state 39
    LPAR     shift, and go to state 40
    ID       shift, and go to state 41

    Expr                go to state 42
    ExprList            go to state 43
    OperatorExpression  go to state 44


State 28

   17 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 45
    ParameterDeclaration  go to state 46
    TypeSpec              go to state 47


State 29

   10 FunctionBody: LBRACE . DeclarationsAndStatements RBRACE
   11             | LBRACE . RBRACE

    error    shift, and go to state 1
    INTLIT   shift, and go to state 34
    CHRLIT   shift, and go to state 35
    REALLIT  shift, and go to state 36
    IF       shift, and go to state 48
    WHILE    shift, and go to state 49
    RETURN   shift, and go to state 50
    CHAR     shift, and go to state 2
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    VOID     shift, and go to state 6
    PLUS     shift, and go to state 37
    MINUS    shift, and go to state 38
    NOT      shift, and go to state 39
    LBRACE   shift, and go to state 51
    LPAR     shift, and go to state 40
    RBRACE   shift, and go to state 52
    SEMI     shift, and go to state 53
    ID       shift, and go to state 41

    DeclarationsAndStatements  go to state 54
    Declaration                go to state 55
    TypeSpec                   go to state 56
    Statement                  go to state 57
    Expr                       go to state 42
    ExprList                   go to state 58
    OperatorExpression         go to state 44


State 30

   16 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 16 (FunctionDeclaration)


State 31

    9 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 9 (FunctionDefinition)


State 32

   25 DeclaratorList: COMMA . Declarator DeclaratorList

    ID  shift, and go to state 59

    Declarator  go to state 60


State 33

   23 Declaration: TypeSpec Declarator DeclaratorList . SEMI

    SEMI  shift, and go to state 61


State 34

   53 Expr: INTLIT .

    $default  reduce using rule 53 (Expr)


State 35

   54 Expr: CHRLIT .

    $default  reduce using rule 54 (Expr)


State 36

   55 Expr: REALLIT .

    $default  reduce using rule 55 (Expr)


State 37

   79 OperatorExpression: PLUS . Expr

    INTLIT   shift, and go to state 34
    CHRLIT   shift, and go to state 35
    REALLIT  shift, and go to state 36
    PLUS     shift, and go to state 37
    MINUS    shift, and go to state 38
    NOT      shift, and go to state 39
    LPAR     shift, and go to state 40
    ID       shift, and go to state 41

    Expr                go to state 62
    OperatorExpression  go to state 44


State 38

   80 OperatorExpression: MINUS . Expr

    INTLIT   shift, and go to state 34
    CHRLIT   shift, and go to state 35
    REALLIT  shift, and go to state 36
    PLUS     shift, and go to state 37
    MINUS    shift, and go to state 38
    NOT      shift, and go to state 39
    LPAR     shift, and go to state 40
    ID       shift, and go to state 41

    Expr                go to state 63
    OperatorExpression  go to state 44


State 39

   81 OperatorExpression: NOT . Expr

    INTLIT   shift, and go to state 34
    CHRLIT   shift, and go to state 35
    REALLIT  shift, and go to state 36
    PLUS     shift, and go to state 37
    MINUS    shift, and go to state 38
    NOT      shift, and go to state 39
    LPAR     shift, and go to state 40
    ID       shift, and go to state 41

    Expr                go to state 64
    OperatorExpression  go to state 44


State 40

   49 Expr: LPAR . ExprList RPAR
   57     | LPAR . error RPAR

    error    shift, and go to state 65
    INTLIT   shift, and go to state 34
    CHRLIT   shift, and go to state 35
    REALLIT  shift, and go to state 36
    PLUS     shift, and go to state 37
    MINUS    shift, and go to state 38
    NOT      shift, and go to state 39
    LPAR     shift, and go to state 40
    ID       shift, and go to state 41

    Expr                go to state 42
    ExprList            go to state 66
    OperatorExpression  go to state 44


State 41

   50 Expr: ID . LPAR Expr ExprOptionalList RPAR
   51     | ID . LPAR RPAR
   52     | ID .
   56     | ID . LPAR error RPAR

    LPAR  shift, and go to state 67

    $default  reduce using rule 52 (Expr)


State 42

   59 ExprList: Expr .
   62 OperatorExpression: Expr . ASSIGN Expr
   63                   | Expr . PLUS Expr
   64                   | Expr . MINUS Expr
   65                   | Expr . MUL Expr
   66                   | Expr . DIV Expr
   67                   | Expr . MOD Expr
   68                   | Expr . OR Expr
   69                   | Expr . AND Expr
   70                   | Expr . BITWISEAND Expr
   71                   | Expr . BITWISEOR Expr
   72                   | Expr . BITWISEXOR Expr
   73                   | Expr . EQ Expr
   74                   | Expr . NE Expr
   75                   | Expr . LE Expr
   76                   | Expr . GE Expr
   77                   | Expr . LT Expr
   78                   | Expr . GT Expr

    PLUS        shift, and go to state 68
    MINUS       shift, and go to state 69
    MUL         shift, and go to state 70
    DIV         shift, and go to state 71
    MOD         shift, and go to state 72
    EQ          shift, and go to state 73
    NE          shift, and go to state 74
    GE          shift, and go to state 75
    GT          shift, and go to state 76
    LE          shift, and go to state 77
    LT          shift, and go to state 78
    AND         shift, and go to state 79
    OR          shift, and go to state 80
    BITWISEAND  shift, and go to state 81
    BITWISEOR   shift, and go to state 82
    BITWISEXOR  shift, and go to state 83
    ASSIGN      shift, and go to state 84

    $default  reduce using rule 59 (ExprList)


State 43

   32 Declarator: ID ASSIGN ExprList .
   58 ExprList: ExprList . COMMA Expr

    $default  reduce using rule 32 (Declarator)


State 44

   48 Expr: OperatorExpression .

    $default  reduce using rule 48 (Expr)


State 45

   17 FunctionDeclarator: ID LPAR ParameterList . RPAR

    RPAR  shift, and go to state 86


State 46

   18 ParameterList: ParameterDeclaration . ParameterDeclarationList

    COMMA  shift, and go to state 87

    $default  reduce using rule 20 (ParameterDeclarationList)

    ParameterDeclarationList  go to state 88


State 47

   21 ParameterDeclaration: TypeSpec . ID
   22                     | TypeSpec .

    ID  shift, and go to state 89

    $default  reduce using rule 22 (ParameterDeclaration)


State 48

   34 Statement: IF . LPAR ExprList RPAR StatementOrError
   35          | IF . LPAR ExprList RPAR StatementOrError ELSE StatementOrError

    LPAR  shift, and go to state 90


State 49

   36 Statement: WHILE . LPAR ExprList RPAR StatementOrError

    LPAR  shift, and go to state 91


State 50

   38 Statement: RETURN . ExprList SEMI
   39          | RETURN . SEMI
